# NewsManager

./: README.md  pyproject.toml
_server/: .env.example  .gitignore
_server/core/: models.py  urls.py  views.py
_server/core/migrations/: 0001_initial.py  0002_savedarticle_url.py  0003_savedarticle_published_at.py  0004_alter_savedarticle_author_and_more.py
_server/registration/templates/registration/: base.html  sign_in.html  sign_up.html
client/: package-lock.json  package.json
client/src/: App.jsx  ArticleWindow.jsx  CategoryDropdown.jsx  Recommended.jsx  Saved.jsx  Search.jsx  SearchOptions.jsx  ViewArticle.jsx  index.css  main.jsx
