[tool.poetry]
name = "News-Manager"
version = "0.1.0"
description = ""
authors = ["Tanner Singleton <tannersingleton9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
django = "^5.0.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
